<resources>
    <string name="app_name">Pinjam Ruang</string>
    <string name="title_activity__awal">Activity_Awal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nama Pengguna</string>
    <string name="nav_header_subtitle">NIP Pengguna</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Pengaturan</string>
    <string name="user_image">User Image</string>
    <string name="name">Nama</string>
    <string name="jabatan">Jabatan</string>
    <string name="department">Bidang</string>
    <string name="nip">NIP</string>


    <string name="menu_home">Beranda</string>
    <string name="menu_profil">Profil</string>
    <string name="menu_logout">Keluar</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Masuk</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Selamat Datang"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="slogan">Meminjam ruangan kini menjadi lebih mudah</string>

    <string name="namaruang">Nama Ruang</string>
    <string name="namaruangan">Nama Ruangan</string>
    <string name="PinjamRuang">Pinjam Ruang</string>
    <string name="version">Versi</string>
    <string name="pinruemail">kominfo@jatimprov.go.id</string>
    <string name="copyright">Copyright Kominfo Jatim</string>
    <string name="closedialaog">Close Dialog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

</resources>
