<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                android:paddingTop="32dp"
                android:paddingBottom="32dp"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_action_name" />
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:text="@string/name"
                    android:textSize="21sp"
                    android:textStyle="bold"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="32dp"
                android:paddingTop="32dp"
                android:paddingBottom="32dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/colorBackground"
                        android:src="@drawable/ic_action_close_nippeg" />

                    <TextView
                        android:id="@+id/tv_nip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/nip"
                        android:textStyle="bold" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                     />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/colorBackground"
                        android:src="@drawable/ic_action_ikonbidang"/>
                    <TextView
                        android:id="@+id/tv_bidang"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/department"
                        android:textStyle="bold" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_gravity="center"
                    android:orientation="horizontal">
                    />
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp"
                        android:background="@color/colorBackground"
                        android:src="@drawable/ic_action_close_jabatan"/>
                    <TextView
                        android:id="@+id/tv_jabatan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/jabatan"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_logout"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:drawableEnd="@drawable/ic_action_out"
                android:drawableRight="@drawable/ic_action_out"
                android:drawablePadding="16dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:background="@color/warna_merah"
                android:text="Keluar" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

<!--    tools:context=".ui.main.user.UserFragment"-->